try touch instead of mouse

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ text {
     }
 
     svg.on("touchmove", function() {
-      var mouse = d3.mouse(this);
+      var mouse = d3.touches(this);
       xScale.distortion(2.5).focus(mouse[0]);
       yScale.distortion(2.5).focus(mouse[1]);
 
